--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-image-picker": "^17.0.8",
+    "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-location": "^19.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -35,8 +36,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
+    "react-native-paper-dropdown": "^2.3.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -44,6 +47,7 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@react-native-picker/picker": "^2.11.4",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
